--- a/src/app/useful-links/useful-links.component.css
+++ b/src/app/useful-links/useful-links.component.css
@@ -12,6 +12,9 @@
 #sidebar-wrapper{
     min-height: 100%;
     display: flex;
+    position: absolute;
+    right: 0;
+    border-top: 1px solid var(--bs-dark);
 }
 
 #menu-icon{
@@ -37,3 +40,10 @@
 hr.divider{
     margin: 0;
 }
+
+/*@media only screen and (min-width: 768px) {
+    div#sidebar-wrapper.toggled {
+        position: absolute;
+    }
+}*/
+
